log

Thu 14 Mar 2024 08:28:33 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
fb6deda
Thu 14 Mar 2024 08:30:07 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
3aa9d58
Thu 14 Mar 2024 08:36:33 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   47 |   int *newArr = malloc(size * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9771ac0
Thu 14 Mar 2024 08:39:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   47 |   int *newArr = malloc(size * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e89113e
Thu 14 Mar 2024 08:48:21 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:34: error: array subscript is not an integer
   51 |       if (arr[i] % 2 == 0) newArr[newSize] = arr[i];
      |                                  ^
cc1: all warnings being treated as errors
Compilation failed
56856d8
Thu 14 Mar 2024 08:49:40 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:34: error: array subscript is not an integer
   52 |       if (arr[i] % 2 == 0) newArr[newSize] = arr[i];
      |                                  ^
Compilation failed
41a41e9
Thu 14 Mar 2024 08:51:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
070a76b
Thu 14 Mar 2024 08:56:43 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘compare’:
exercises.c:66:18: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |   int PtrPivot = (int*) pivot;
      |                  ^
exercises.c:67:17: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |   int PtrElem = (int*) elem;
      |                 ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:14: error: ‘j’ undeclared (first use in this function)
   75 |       result[j] = arr1[i];
      |              ^
exercises.c:75:14: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:77:3: error: ‘i’ undeclared (first use in this function)
   77 |   i = 0;
      |   ^
cc1: all warnings being treated as errors
Compilation failed
f637619
Thu 14 Mar 2024 08:57:01 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘compare’:
exercises.c:66:18: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |   int PtrPivot = (int*) pivot;
      |                  ^
exercises.c:67:17: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |   int PtrElem = (int*) elem;
      |                 ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:76:14: error: ‘j’ undeclared (first use in this function)
   76 |       result[j] = arr1[i];
      |              ^
exercises.c:76:14: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
fc2629c
Thu 14 Mar 2024 08:57:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘compare’:
exercises.c:66:18: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |   int PtrPivot = (int*) pivot;
      |                  ^
exercises.c:67:17: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |   int PtrElem = (int*) elem;
      |                 ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:76:14: error: ‘j’ undeclared (first use in this function)
   76 |       result[j] = arr1[i];
      |              ^
exercises.c:76:14: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
f650f67
Thu 14 Mar 2024 08:57:58 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘compare’:
exercises.c:66:19: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   66 |   int PtrPivot = *(int) pivot;
      |                   ^
exercises.c:66:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   66 |   int PtrPivot = *(int) pivot;
      |                  ^~~~~~~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:76:14: error: ‘j’ undeclared (first use in this function)
   76 |       result[j] = arr1[i];
      |              ^
exercises.c:76:14: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
d9936bb
Thu 14 Mar 2024 08:58:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:76:14: error: ‘j’ undeclared (first use in this function)
   76 |       result[j] = arr1[i];
      |              ^
exercises.c:76:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
91421a5
Thu 14 Mar 2024 08:58:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
870b429
